src- Version 4.19/objects/Quote_Rate_Plan_Charge_Tier__c.object
<CustomObject>
    <fields>
        <fullName>End_Unit__c</fullName>
        <label>End Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>Quote_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charge_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Unit__c</fullName>
        <label>Start Unit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost_Price__c</fullName>
        <label>Unit Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Quote Rate Plan Charge Tier</label>
    <nameField>
        <displayFormat>Q-TIER-{0000}</displayFormat>
        <label>Tier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>